# rosary

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: release.py
src/rosary/: api.py  app.py  main.py  mysteries.py  prayers.py
src/rosary/screens/: intentions.py  mystery_select.py  rosary.py  welcome.py
src/scripts/: release.py
tests/: smoke_test.py  test_api.py  test_mysteries.py  test_prayers.py  test_rosary_screen.py
