[project]
name = "rosary"
version = "1.0.0"
description = "A terminal UI to guide users through the Rosary"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.74",
    "httpx>=0.27",
]

[project.scripts]
rosary = "rosary.main:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
